# htb-gui-pipx

./: .gitignore  README.md  pyproject.toml  requirements.txt
htb_gui/: config.py
htb_gui/api/: client.py
htb_gui/ui/: main_window.py  top_nav.py
htb_gui/ui/pages/: dashboard.py  machine_detail.py
ui/: styles.py
ui/pages/: __init__.py  machines.py  seasons.py  settings.py  vpn.py
ui/widgets/: machine_card.py
