[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "htb-gui"
version = "1.0.0"
description = "A modern GUI application for interacting with HackTheBox API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "L1nvx"}
]
dependencies = [
    "PySide6>=6.5.0",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
htb-gui = "htb_gui.main:main"

[tool.setuptools.packages.find]
include = ["htb_gui*"]
